Nuxt-Flask 1.0.4
